err/txradius.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Automat-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/Twisted-17.9.0.egg-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/automat'...
Listing './lib/python3.5/site-packages/automat/_test'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/constantly'...
Listing './lib/python3.5/site-packages/constantly-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/exampleproj'...
Listing './lib/python3.5/site-packages/hyperlink'...
Listing './lib/python3.5/site-packages/hyperlink/test'...
Listing './lib/python3.5/site-packages/hyperlink-17.3.1.dist-info'...
Listing './lib/python3.5/site-packages/incremental'...
Listing './lib/python3.5/site-packages/incremental/tests'...
Listing './lib/python3.5/site-packages/incremental-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/_threads'...
Listing './lib/python3.5/site-packages/twisted/_threads/test'...
Listing './lib/python3.5/site-packages/twisted/application'...
Listing './lib/python3.5/site-packages/twisted/application/runner'...
Listing './lib/python3.5/site-packages/twisted/application/runner/test'...
Listing './lib/python3.5/site-packages/twisted/application/test'...
Listing './lib/python3.5/site-packages/twisted/application/twist'...
Listing './lib/python3.5/site-packages/twisted/application/twist/test'...
Listing './lib/python3.5/site-packages/twisted/conch'...
Listing './lib/python3.5/site-packages/twisted/conch/client'...
Listing './lib/python3.5/site-packages/twisted/conch/insults'...
Listing './lib/python3.5/site-packages/twisted/conch/openssh_compat'...
Listing './lib/python3.5/site-packages/twisted/conch/scripts'...
Listing './lib/python3.5/site-packages/twisted/conch/ssh'...
Listing './lib/python3.5/site-packages/twisted/conch/test'...
Listing './lib/python3.5/site-packages/twisted/conch/ui'...
Listing './lib/python3.5/site-packages/twisted/cred'...
Listing './lib/python3.5/site-packages/twisted/cred/test'...
Listing './lib/python3.5/site-packages/twisted/enterprise'...
Listing './lib/python3.5/site-packages/twisted/internet'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor/iocpsupport'...
Listing './lib/python3.5/site-packages/twisted/internet/test'...
Listing './lib/python3.5/site-packages/twisted/internet/test/fake_CAs'...
Listing './lib/python3.5/site-packages/twisted/logger'...
Listing './lib/python3.5/site-packages/twisted/logger/test'...
Listing './lib/python3.5/site-packages/twisted/mail'...
Listing './lib/python3.5/site-packages/twisted/mail/test'...
Listing './lib/python3.5/site-packages/twisted/names'...
Listing './lib/python3.5/site-packages/twisted/names/test'...
Listing './lib/python3.5/site-packages/twisted/pair'...
Listing './lib/python3.5/site-packages/twisted/pair/test'...
Listing './lib/python3.5/site-packages/twisted/persisted'...
Listing './lib/python3.5/site-packages/twisted/persisted/test'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './lib/python3.5/site-packages/twisted/positioning'...
Listing './lib/python3.5/site-packages/twisted/positioning/test'...
Listing './lib/python3.5/site-packages/twisted/protocols'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy/test'...
Listing './lib/python3.5/site-packages/twisted/protocols/test'...
Listing './lib/python3.5/site-packages/twisted/python'...
Listing './lib/python3.5/site-packages/twisted/python/_pydoctortemplates'...
Listing './lib/python3.5/site-packages/twisted/python/test'...
Listing './lib/python3.5/site-packages/twisted/runner'...
Listing './lib/python3.5/site-packages/twisted/runner/test'...
Listing './lib/python3.5/site-packages/twisted/scripts'...
Listing './lib/python3.5/site-packages/twisted/scripts/test'...
Listing './lib/python3.5/site-packages/twisted/spread'...
Listing './lib/python3.5/site-packages/twisted/spread/test'...
Listing './lib/python3.5/site-packages/twisted/tap'...
Listing './lib/python3.5/site-packages/twisted/test'...
Listing './lib/python3.5/site-packages/twisted/trial'...
Listing './lib/python3.5/site-packages/twisted/trial/_dist'...
Listing './lib/python3.5/site-packages/twisted/trial/_dist/test'...
Listing './lib/python3.5/site-packages/twisted/trial/test'...
Listing './lib/python3.5/site-packages/twisted/web'...
Listing './lib/python3.5/site-packages/twisted/web/_auth'...
Listing './lib/python3.5/site-packages/twisted/web/test'...
Listing './lib/python3.5/site-packages/twisted/words'...
Listing './lib/python3.5/site-packages/twisted/words/im'...
Listing './lib/python3.5/site-packages/twisted/words/protocols'...
Listing './lib/python3.5/site-packages/twisted/words/protocols/jabber'...
Listing './lib/python3.5/site-packages/twisted/words/test'...
Listing './lib/python3.5/site-packages/twisted/words/xish'...
Listing './lib/python3.5/site-packages/txradius'...
Compiling './lib/python3.5/site-packages/txradius/authorize.py'...
***   File "./lib/python3.5/site-packages/txradius/authorize.py", line 63
    def datagramReceived(self, datagram, (host, port)):
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txradius/client.py'...
***   File "./lib/python3.5/site-packages/txradius/client.py", line 72
    def datagramReceived(self, datagram, (host, port)):
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/txradius/ext'...
Compiling './lib/python3.5/site-packages/txradius/ext/ikuai.py'...
***   File "./lib/python3.5/site-packages/txradius/ext/ikuai.py", line 39
    print repr(pp)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/txradius/mschap'...
Compiling './lib/python3.5/site-packages/txradius/mschap/U32.py'...
***   File "./lib/python3.5/site-packages/txradius/mschap/U32.py", line 23
    C = 0x1000000000L
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txradius/mschap/des_c.py'...
***   File "./lib/python3.5/site-packages/txradius/mschap/des_c.py", line 212
    r, l, t = PERM_OP((r, l, t),  4, U32(0x0f0f0f0fL))
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txradius/mschap/des_data.py'...
***   File "./lib/python3.5/site-packages/txradius/mschap/des_data.py", line 28
    U32(0x00820200L), U32(0x00020000L), U32(0x80800000L), U32(0x80820200L),
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txradius/mschap/md4.py'...
***   File "./lib/python3.5/site-packages/txradius/mschap/md4.py", line 29
    ('', 0x31d6cfe0d16ae931b73c59d7e0c089c0L),
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txradius/mschap/utils.py'...
***   File "./lib/python3.5/site-packages/txradius/mschap/utils.py", line 26
    res = 0L
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/txradius/radius'...
Compiling './lib/python3.5/site-packages/txradius/radtest.py'...
***   File "./lib/python3.5/site-packages/txradius/radtest.py", line 56
    print "radius auth: ",repr(req)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/txradius/statistics.py'...
***   File "./lib/python3.5/site-packages/txradius/statistics.py", line 73
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/txradius/tests'...
Listing './lib/python3.5/site-packages/txradius-0.0.7.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
